--- a/agent.yaml
+++ b/agent.yaml
@@ -1,14 +1,13 @@
-handle: "chart"
+handle: "youtube"
 description: |
-  The `chart` agent can draw bar, line, and pie charts from data. This data can either be passed
+  The `youtube` agent can search and recommends youtube videos. This data can either be passed
   in or looked up from the LLM's knowledge.
 
   Example queries:
-    - Make a bar chart odf the 5 tallest mountains.
-    - Create a pie chart showing the population of the world, broken down by continent.
-    - Generate a line chart comparing the average daily temperatures in New York and Seattle by month.
+    - find a video on "...".
+    - find a video similar to "..."
 
-  Tags: funcs, images
-more_info_url: "https://github.com/fixie-ai/fixie-examples"
+  Tags: funcs, video, youtube, media
+more_info_url: "https://github.com/bahadiri/fixie-youtube"
 entry_point: main:agent
 public: false
